--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -39,6 +39,9 @@
                             <input type="submit" name="submit" class="btn btn-success" value="Search">
                         </div>
                     </form>
+                    <div class="bg-secondary">
+                        <p></p>
+                    </div>
             </div>
         </div>
 </body>
